objects/People_Like_You_Data__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average__c</fullName>
        <formula>( High_Average__c  +  Low_Average__c )/2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Game_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Game Name</label>
        <referenceTo>Game_Detail__c</referenceTo>
        <relationshipLabel>People Like You Data</relationshipLabel>
        <relationshipName>People_Like_You_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>High_Average__c</fullName>
        <label>High Average</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_Average__c</fullName>
        <label>Low Average</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Intersex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>People Like You Data</label>
    <nameField>
        <displayFormat>PLUD-{000000}</displayFormat>
        <label>People Like You Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>People Like You Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>